integrated rabbitMq
